Update resume.html reference to index
changed home.html to index.html

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
     <h1>Cristian Puente-Ortiz</h1>
     <p>A forward-thinking leader, dedicated scholar, and kind friend passionately striving to make positive change.</p>
 		
-	<a class="banner-buttons" href="home.html">Home</a> <a class="banner-buttons" href="projects.html">Projects</a>		
+	<a class="banner-buttons" href="index.html">Home</a> <a class="banner-buttons" href="projects.html">Projects</a>		
 	
   </div>
 </div>
