Update index.html text
Signed-off-by: c-puente <capuente6@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<h1 class="top-name">My name is Cristian Puente-Ortiz.</h1>
 	
 <br>   
- <p>I am a forward-thinking leader, dedicated scholar, and kind friend passionately striving to make positive change.</p>
+ <p>I am a forward-thinking leader, dedicated worker, and kind friend passionately striving to make positive change.</p>
 	
 	
 	<a class="banner-buttons" href="resume.html">Resume</a> <a class="banner-buttons" href="projects.html">Projects</a>   
@@ -32,19 +32,25 @@
 		<br>
 		<a href="https://www.linkedin.com/in/cristian-p" target="_blank"><div id = "linkedin"></div> </a>
 		<hr style="margin-left: 5%; margin-top: -1.3%; margin-bottom: -2%">
-		<a href="mailto:capuente@iu.edu" target="_blank"><div id = "email"></div> </a>		
+		<a href="mailto:capuente6@gmail.com" target="_blank"><div id = "email"></div> </a>		
 	<!-- Mail Icon made by https://www.flaticon.com/authors/smashicons "Smashicons" from https://www.flaticon.com/  -->
 		</div>
 		
 		<div class="eight columns bio-text">
 			<h1 class="section-title">About Me</h1> 
-			<p> I am a second-year student at Indiana University Bloomington pursuing majors in Economic Consulting and Business Analytics through the <a href="https://kelley.iu.edu/programs/undergrad/index.cshtml" target="_blank" class = "bio-links">Kelley School of Business</a>.
-			I also intend on attaining a minor in Informatics through the <a href="https://sice.indiana.edu/" target="_blank" class = "bio-links">School of Informatics, Computing, and Engineering</a>. This site was created and designed from scratch for my Informatics 101 course.
-			Explore my site and you will find out more about my previous experiences and some of my past projects!</p>
+			<p> My educational background 
+				(<a href="https://exploreprograms.indiana.edu/majors/economic-consulting" target="_blank" class = "bio-links">Economic Consulting</a>, 
+				<a href="https://exploreprograms.indiana.edu/majors/business-analytics" target="_blank" class = "bio-links">Business Analytics</a>, 
+				<a href="https://luddy.indianapolis.iu.edu/what-is-informatics/index.html" target="_blank" class = "bio-links">Informatics</a>) 
+				gave me the space to explore my passion and curiosity for the intersections of business and technology. It also helped develop my analysis skills and experience with big data using Microsoft Excel, R, Stata, SQL, and Python through projects, course lab work, and case competitions.</p>
+
+<p>At Google, I partnered with SMBs across the US to tailor product solutions to their growth goals as a product expert and internal resource. I worked with teams around the world to drive profitable investments, constantly reviewing costs, benchmarking, and calculating returns. </p>
+
+<p>At Beyond Finance, I advanced financial analysis by building sophisticated models to optimize cash flow forecasting and KPI reporting, improving business operations and identifying strategic opportunities. My contributions have improved EBIT performance, streamlined processes, and supported data-driven decision-making at the executive level.</p>
+
+<p>I aspire to leverage the analytics skills from my educational background along with my solutions-oriented experiences with businesses to improve operations, uncover unique insights, and lead impactful projects.</p>
+ <p>This site was originally created and designed from scratch for my Informatics course. Explore my site and you will find out more about my previous experiences and some of my past projects!</p>
 			<br>	<!-- It really was coded from scratch in case you're checking ;)  -->
-			<p>Some more about me personally: I am from Los Angeles, California, but I haven't always lived there. I was born in San Juan, Puerto Rico but later moved to Indiana. Then, California. Then, Florida. Then, California again.
-			Now I go to school back again in Indiana, but I have grown up traveling internationally to visit my dad. He works abroad and every couple of years moves to a new country. Wherever he is, I visit him and we explore countries near him. 
-			Currently, he lives in London, United Kingdom, so I have been fortunate enough to spend parts of my academic breaks in Europe. In total, I have visited 25 countries across four continents.</p>
 		</div>
 	</div>
 </div>
@@ -54,13 +60,11 @@
           <a href="#top"><div class="back-to-top" id="back-to-top" onclick="location.href='#top';">
 		  <a href="#top" class= "top-link"><img class="triangle-top" src="images/triangle.png" /></a>
 		  <div class="top-link-text"><a href="#top" class= "top-link">Top</a> </div>
-		  </div> </a>
-		  <!-- "back-to-top" idea from https://www.ubdc.org , a website I manage as president of the organization. -->
-		  
+		  </div> </a>		  
 
 		  <p class="statement"> 	HTML column framework by <a href="http://getskeleton.com/" target="_blank">Skeleton</a>  | Top pic courtesy of <a target="_blank" href="https://picserio.com/palm-tree-computer-wallpaper/3768335.html">Picserio</a> | Other inspirations listed in attributions commented within the HTML of this site. 
 		  </p> 
-		  <p  class="statement" > I certify that the content included in this portfolio/website is my own original work (or is cited accurately) and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included.<i>  Cristian Puente-Ortiz</i>
+		 <!-- <p  class="statement" > I certify that the content included in this portfolio/website is my own original work (or is cited accurately) and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included.<i>  Cristian Puente-Ortiz</i> -->
 
 
           
@@ -73,7 +77,6 @@
 	Thanks to https://sice.indiana.edu/ IU's School of Informatics, Computing, and Engineering, for text shadow inspiration
 	HTML Skeleton framework for layout: http://getskeleton.com
 	Image of palm trees in top banner courtesy of https://picserio.com/palm-tree-computer-wallpaper/3768335.html 
-	Thanks to the Undergraduate Business Diversity Council ("UBDC") https://www.ubdc.org for the idea of back-to-top ; It is a website I manage as president of the organization
 	Thanks to w3schools for all the help, especially with the parallax effect using "background-attachment" https://www.w3schools.com/howto/howto_css_parallax.asp
 	Again: I certify that the content included in this portfolio/website is my own original work (or is cited accurately) and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included. Cristian Puente-Ortiz
 	
