--- a/projects.html
+++ b/projects.html
@@ -106,8 +106,8 @@
 		  
 		  <p class="statement"> 	HTML column framework by <a href="http://getskeleton.com/" target="_blank">Skeleton</a>  | Top pic courtesy of <a target="_blank" href="https://picserio.com/palm-tree-computer-wallpaper/3768335.html">Picserio</a> | Other inspirations listed in attributions commented within the HTML of this site. 
 		  </p> 
-		  <p  class="statement" > I certify that the content included in this portfolio/website is my own original work (or is cited accurately) and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included.<i>  Cristian Puente-Ortiz</i>
-
+		  <!-- <p  class="statement" > I certify that the content included in this portfolio/website is my own original work (or is cited accurately) and accurate to my knowledge. Work included which was conducted as part of a team or other group is indicated and attributed as such the other team members are named and a true description of my role in the project is included.<i>  Cristian Puente-Ortiz</i>
+		    -->
 <script>
 	function top(){
 		window.location.href = '#top'
