--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 			 <h4 class="section-title" > Deloitte Data Challenge Case Competition [1st Place]: </h4>
 		<div class="six columns bio-text">
 		
-			<p style="margin-top: -5%"> <b>Team members</b> - Alyssa Aquino, Dakota Koenig, Kate Olson, Cristian Puente-Ortiz, Nick Schmidt </p>
+			<p style="margin-top: -5%"> <b>Team members</b> - Cristian Puente-Ortiz, Alyssa Aquino, Dakota Koenig, Kate Olson, Nick Schmidt </p>
 			<p style="margin-top: -3%"> <b>Details</b> - As part of my course, BUS-K 303: Technology & Business Analysis, we had a final case project sponsored by Deloitte Consulting where we were given a coffee shop's transaction data and asked to come up with a system for evaluating ways to 
 			reduce the shop's environmental impact. In addition to historic data of the coffee shop's sales, we were also given multiple solutions that the coffee shop is considering with the probabilities and success rate of each. For example, the varying likelihood of customers disposing the cups correctly, 
 			and the probability of certain percentage customer increases. With this, we provided two options for the user: to look at static data based on the assumptions given to us in the case or to look at dynamic data that ran through 1000 simulations and returned the most likely number (the central tendency).
@@ -54,7 +54,7 @@
 			 <h4 class="section-title" > BUS-K 204 Honors Computer in Business Case Competition [Top 10]: </h4>
 		<div class="six columns bio-text">
 		
-			<p style="margin-top: -5%"> <b>Team members</b> - Abbey Dobosz, Kyle Fitzgerald, Hayden Hodge, Jack McGuire, Victor Tang  </p>
+			<p style="margin-top: -5%"> <b>Team members</b> - Cristian Puente-Ortiz, Abbey Dobosz, Kyle Fitzgerald, Hayden Hodge, Jack McGuire, Victor Tang  </p>
 			<p style="margin-top: -3%"> <b>Details</b> - At the end of BUS-K 204, taken Spring 2018, there was a case competition between hundreds of teams taking the class. The case was to assist a fire station and company in Skillman, New Jersey with digitizing their data collection process as well as optimizing inventory and general data management. Our database was constructed in Microsoft Access and included an embedded excel file [pictured]. 
 			The database had multiple levels of privileges depending on the authority of the user, based on the login information. The Administrator would have the most privileges to add or change records and make edits to any of the data, whereas a lower-ranking user would have less. Based on who logs in, the home page greets the user by name, and only personal data can be edited (unless it's the admin). The excel provides users with a reference to find equipment on each of the fire station's trucks. 
 			One of the biggest challenges was learning how the old paper-based system worked, as well as the specific terminology that the fire station/company wanted to use. </p>
