Update index.html add hackerrank logo/link
Signed-off-by: c-puente <capuente6@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 		<img class= "headshot-circle" src="images/headshot-circle.png" />
 		<br>
 		<br>
-		<a href="https://www.linkedin.com/in/cristian-p" target="_blank"><div id = "linkedin"></div> </a>
+		<div class="icon-row">
+		<a href="https://www.linkedin.com/in/cristian-p" target="_blank">
+			<div id="linkedin"></div>
+		</a>
+		<a href="https://hackerrank.com/capuente6" target="_blank">
+			<div id="hackerrank"></div>
+		</a>
+		</div>
 		<hr style="margin-left: 5%; margin-top: -1.3%; margin-bottom: -2%">
 		<a href="mailto:capuente6@gmail.com" target="_blank"><div id = "email"></div> </a>		
 	<!-- Mail Icon made by https://www.flaticon.com/authors/smashicons "Smashicons" from https://www.flaticon.com/  -->
