--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
 		<img class= "headshot-circle" src="images/headshot-circle.png" />
 		<br>
 		<br>
-		<div class="icon-row">
+		
 		<a href="https://www.linkedin.com/in/cristian-p" target="_blank">
 			<div id="linkedin"></div>
 		</a>
+		<hr style="margin-left: 5%; margin-top: -1.3%; margin-bottom: -2%">
 		<a href="https://hackerrank.com/capuente6" target="_blank">
 			<div id="hackerrank"></div>
 		</a>
-		</div>
+
 		<hr style="margin-left: 5%; margin-top: -1.3%; margin-bottom: -2%">
 		<a href="mailto:capuente6@gmail.com" target="_blank"><div id = "email"></div> </a>		
 	<!-- Mail Icon made by https://www.flaticon.com/authors/smashicons "Smashicons" from https://www.flaticon.com/  -->
